# ipfs-simulator

./: Cargo.toml  README.md  config.toml  notes.txt
benches/: main_bench.rs
src/: app.rs  lib.rs  main.rs  message.rs  network.rs  peer.rs  storage.rs
src/cid/: hashing.rs  ipfs_cid.rs  mod.rs  multicodec.rs
src/config/: mod.rs  simulation_config.rs  toml_parser.rs
src/kademlia/: bitarray.rs  kademlia.rs  mod.rs
src/kbucket/: bucket.rs  key.rs  mod.rs
src/network/: agent.rs  delay_distribution.rs  mod.rs  topology.rs  user_load.rs
src/query/: config.rs  mod.rs  pool.rs  stats.rs
src/query/variants/: find_node.rs  get_value.rs  mod.rs  ping.rs  put_value.rs
