[package]
name = "ipfs_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab.git" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
sha2 = "0.10.8"
criterion = "0.5.1"
uint = "0.9"
arrayvec = "0.7.4"
smallvec = "1.13.2"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
lazy_static = "1.4"

[[bench]]
name = "main_bench"
harness = false

# [profile.release]
# debug = true
